<resources>
    <string name="app_name">Pt1_Romeu_Joel</string>
    <string name="calculator">Calculator</string>
    <string name="btnnum1">1</string>
    <string name="btnIgual">=</string>
    <string name="btnnum2">2</string>
    <string name="btnnum3">3</string>
    <string name="btnnum4">4</string>
    <string name="btnnum5">5</string>
    <string name="btnnum6">6</string>
    <string name="btnnum7">7</string>
    <string name="btnnum8">8</string>
    <string name="btnnum9">9</string>
    <string name="btnMenys">−</string>
    <string name="btnMes">+</string>
    <string name="btnnum0">0</string>
    <string name="btnX">×</string>
    <string name="btnComa">,</string>
    <string name="btnSigno">⁺∕₋</string>
    <string name="btnDividir">÷</string>
    <string name="btnC">C</string>
    <string name="btnCE">CE</string>
    <string name="btnBorrar">⌫</string>
</resources>